@@ -1,3 +1,8 @@
+2013-05-13  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Analysis histo booking improvements for Scatter2D, placeholders
+	for 2D histos, and general tidying.
+
 2013-05-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding configure-time differentiation between yaml-cpp API versions 3 and 5.
